--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -139,12 +139,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EasyLevelMaze.cpp" />
+    <ClCompile Include="FrontEnd.cpp" />
     <ClCompile Include="LoginSystem.cpp" />
     <ClCompile Include="Maze-Project.cpp" />
     <ClCompile Include="MazeGenerationAlgorithm.cpp" />
     <ClCompile Include="RegistrationSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EasyLevelMaze.h" />
+    <ClInclude Include="FrontEnd.h" />
     <ClInclude Include="LoginSystem.h" />
     <ClInclude Include="MazeGenerationAlgorithm.h" />
     <ClInclude Include="RegistrationSystem.h" />
