--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
@@ -18,48 +18,48 @@
     <ClCompile Include="Maze-Project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LoginSystem.cpp">
+    <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RegistrationSystem.cpp">
+    <ClCompile Include="Interface\CPP Files\FrontEnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MazeGenerationAlgorithm.cpp">
+    <ClCompile Include="Maze Configuration\CPP Files\MediumLevelMaze.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EasyLevelMaze.cpp">
+    <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="FrontEnd.cpp">
+    <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MediumLevelMaze.cpp">
+    <ClCompile Include="Sign System\CPP Files\RegistrationSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="HardLevelMaze.cpp">
+    <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LoginSystem.h">
+    <ClInclude Include="Interface\Header Files\FrontEnd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RegistrationSystem.h">
+    <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MazeGenerationAlgorithm.h">
+    <ClInclude Include="Maze Configuration\Header Files\MediumLevelMaze.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EasyLevelMaze.h">
+    <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="FrontEnd.h">
+    <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MediumLevelMaze.h">
+    <ClInclude Include="Sign System\Header Files\LoginSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="HardLevelMaze.h">
+    <ClInclude Include="Sign System\Header Files\RegistrationSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
