--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface\Header Files\FrontEnd.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sign System\Header Files\RegistrationSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
