--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Interface\CPP Files\FrontEnd.cpp" />
-    <ClCompile Include="Log.cpp" />
+    <ClCompile Include="Logs\CPP Files\Log.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp" />
@@ -151,7 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface\Header Files\FrontEnd.h" />
-    <ClInclude Include="Log.h" />
+    <ClInclude Include="Logs\Header Files\Log.h" />
     <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h" />
