--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Log.cpp">
+    <ClCompile Include="Logs\CPP Files\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -65,7 +65,7 @@
     <ClInclude Include="Sign System\Header Files\RegistrationSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Log.h">
+    <ClInclude Include="Logs\Header Files\Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
