--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Interface\CPP Files\FrontEnd.cpp" />
+    <ClCompile Include="Logger\CPP Files\Logger.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp" />
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface\Header Files\FrontEnd.h" />
+    <ClInclude Include="Logger\Header Files\Logger.h" />
     <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h" />
