Set up the sha256 function with the registration system

--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -114,7 +114,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -140,7 +140,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Interface\CPP Files\FrontEnd.cpp" />
-    <ClCompile Include="Logger\CPP Files\Logger.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp" />
     <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp" />
@@ -148,16 +147,17 @@
     <ClCompile Include="Maze-Project.cpp" />
     <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp" />
     <ClCompile Include="Sign System\CPP Files\RegistrationSystem.cpp" />
+    <ClCompile Include="Sign System\CPP Files\SHA256.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface\Header Files\FrontEnd.h" />
-    <ClInclude Include="Logger\Header Files\Logger.h" />
     <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h" />
     <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h" />
     <ClInclude Include="Maze Configuration\Header Files\MediumLevelMaze.h" />
     <ClInclude Include="Sign System\Header Files\LoginSystem.h" />
     <ClInclude Include="Sign System\Header Files\RegistrationSystem.h" />
+    <ClInclude Include="Sign System\Header Files\SHA256.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
