--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{883a8856-c37b-4cae-b0fd-0ad4f15fab7a}</ProjectGuid>
+    <ProjectGuid>{96a152a6-6f1b-4ae8-a5eb-6ed85cf7bce0}</ProjectGuid>
     <RootNamespace>MazeProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -116,10 +116,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\SFML-2.5.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\SFML-2.5.1\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-main-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,25 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Interface\CPP Files\FrontEnd.cpp" />
-    <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp" />
-    <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp" />
-    <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp" />
-    <ClCompile Include="Maze Configuration\CPP Files\MediumLevelMaze.cpp" />
     <ClCompile Include="Maze-Project.cpp" />
-    <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp" />
-    <ClCompile Include="Sign System\CPP Files\RegistrationSystem.cpp" />
-    <ClCompile Include="Sign System\CPP Files\SHA256.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Interface\Header Files\FrontEnd.h" />
-    <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h" />
-    <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h" />
-    <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h" />
-    <ClInclude Include="Maze Configuration\Header Files\MediumLevelMaze.h" />
-    <ClInclude Include="Sign System\Header Files\LoginSystem.h" />
-    <ClInclude Include="Sign System\Header Files\RegistrationSystem.h" />
-    <ClInclude Include="Sign System\Header Files\SHA256.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
