Create class for maze algorithm

--- a/Maze-Project/Maze-Project/Maze-Project.vcxproj
+++ b/Maze-Project/Maze-Project/Maze-Project.vcxproj
@@ -142,7 +142,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Interface\CPP Files\FrontEnd.cpp" />
+    <ClCompile Include="Maze Configuration\CPP Files\EasyLevelMaze.cpp" />
+    <ClCompile Include="Maze Configuration\CPP Files\HardLevelMaze.cpp" />
+    <ClCompile Include="Maze Configuration\CPP Files\MazeGenerationAlgorithm.cpp" />
+    <ClCompile Include="Maze Configuration\CPP Files\MediumLevelMaze.cpp" />
     <ClCompile Include="Maze-Project.cpp" />
+    <ClCompile Include="Sign System\CPP Files\LoginSystem.cpp" />
+    <ClCompile Include="Sign System\CPP Files\RegistrationSystem.cpp" />
+    <ClCompile Include="Sign System\CPP Files\SHA256.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Interface\Header Files\FrontEnd.h" />
+    <ClInclude Include="Maze Configuration\Header Files\EasyLevelMaze.h" />
+    <ClInclude Include="Maze Configuration\Header Files\HardLevelMaze.h" />
+    <ClInclude Include="Maze Configuration\Header Files\MazeGenerationAlgorithm.h" />
+    <ClInclude Include="Maze Configuration\Header Files\MediumLevelMaze.h" />
+    <ClInclude Include="Sign System\Header Files\LoginSystem.h" />
+    <ClInclude Include="Sign System\Header Files\RegistrationSystem.h" />
+    <ClInclude Include="Sign System\Header Files\SHA256.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
