--- a/Maze-Project/Maze-Project-Unit-Testing/Maze-Project-Unit-Testing.vcxproj.filters
+++ b/Maze-Project/Maze-Project-Unit-Testing/Maze-Project-Unit-Testing.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Test-MovePixels-Function.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
